[package]
name = "todo-bin"
version = "0.1.0"
edition = "2018"
license = "MIT"
authors = ["Solo-fox work.abdelrahman@outlook.com"]
description = "Simple todo cli program written in rust"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2"
directories = "4.0"
[[bin]]
name = "todo"
path = "src/main.rs"
